<resources>
    <string name="app_name">СтажМастер</string>
    <string name="title_main">Main</string>
    <string name="title_dashboard">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">E-mail</string>
    <string name="group">Группа</string>
    <string name="phone_number">Номер телефона</string>
    <string name="fio">ФИО</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="create_acc">Создайте аккаунт</string>
    <string name="log_in_acc">Войти в аккаунт</string>
    <string name="login_as_admin"><u>Войти как администратор</u></string>
    <string name="login_as_student"><u>Войти как студент</u></string>
    <string name="reg_as_admin"><u>Зарегистрироваться как администратор</u></string>
    <string name="reg_as_student"><u>Зарегистрироваться как студент</u></string>
    <string name="not_have_an_account"><u>Ещё нет аккаунта?</u></string>
    <string name="got_account"><u>У вас уже есть аккаунт ?</u></string>
    <string name="next">Далее</string>
    <string name="xxxxxx">xxxxxx</string>
    <string name="enter_otp">Введите код отправленный на вашу почту</string>
    <string name="sent_link_ver">На вашу почту отправлена ссылка\nдля подтверждения</string>
    <string name="aiting">После подтверждения\nвы можете войти в аккаунт</string>
    <string name="ok">OK</string>
    <string name="dashboard">Личный кабинет</string>
    <string name="please_login">Вы не авторизовались, чтобы получить доступ, пожалуйста авторизуйтесь</string>
    <string name="btn_login">Войти</string>
    <string name="dots">.....................</string>
    <string name="save">Сохранить</string>
    <string name="vacancy">Вакансии</string>
    <string name="students">Студенты</string>
    <string name="add">Add</string>
    <string name="group_is">Группа:</string>
    <string name="company_name">Название компании</string>
    <string name="address">Адрес</string>
    <string name="contacts">Контакты</string>
    <string name="position">Должность</string>
    <string name="add_vacancy">Добавьте вакансию</string>
    <string name="position_is">Должность:</string>
    <string name="cancel">Отмена</string>
    <string name="chosen_job">Вам назначена работа:</string>
    <string name="nochosen_job">Для вас нету назначенной работы</string>
    <string name="report">Отчет</string>
    <string name="send_report">Отправить отчет</string>
    <string name="my_grades">Мои оценки</string>
    <string name="set_grade">Поставить оценку</string>
    <string name="write_grade">Напишите оценку</string>
    <string name="your_grades">Ваши оценки</string>
    <string name="company_is">Компания:</string>
    <string name="garde_is">Оценка:</string>
</resources>