<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/create_acc"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_login"
            style="@style/et_style"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            tools:ignore="TextFields" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="#b0b3ba"
            app:boxBackgroundMode="none"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_password"
                style="@style/et_style"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_reg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_fio"
            style="@style/et_style"
            android:hint="@string/fio"
            android:inputType="text"
            android:maxLines="1"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/et_phone"
            style="@style/et_style"
            android:layout_marginTop="16dp"
            android:maxLength="12"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLines="1"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/et_group"
            style="@style/et_style"
            android:layout_marginTop="16dp"
            android:hint="@string/group"
            android:inputType="text"
            android:maxLines="1"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/et_login_reg"
            style="@style/et_style"
            android:layout_marginTop="16dp"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            tools:ignore="TextFields" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="#b0b3ba"
            app:boxBackgroundMode="none"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_password_reg"
                style="@style/et_style"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_rep_password_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="#b0b3ba"
            app:boxBackgroundMode="none"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_rep_password_reg"
                style="@style/et_style"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_change_status_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ripple_grey"
            android:padding="6dp"
            android:text="@string/reg_as_admin"
            android:textColor="@color/blue"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        style="@style/btn_style"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        tools:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_rg_or_log"/>

    <TextView
        android:id="@+id/tv_rg_or_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_grey"
        android:padding="6dp"
        android:text="@string/got_account"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/wait_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white"
        android:visibility="gone"
        tools:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/sent_link_ver"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aiting"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ok"
            style="@style/btn_style"
            android:layout_marginTop="16dp"
            android:text="@string/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_rg_or_log"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>