<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/dashboard" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/invisible"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ripple_grey"
            android:padding="8dp"
            android:src="@drawable/ic_logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_fio"
                style="@style/et_style"
                android:layout_marginTop="22dp"
                android:hint="@string/fio"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/et_style"
                android:layout_marginTop="16dp"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:maxLength="12"
                android:maxLines="1"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/et_group"
                style="@style/et_style"
                android:layout_marginTop="16dp"
                android:hint="@string/dots"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/et_login"
                style="@style/et_style"
                android:layout_marginTop="16dp"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/login"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                tools:ignore="TextFields" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                style="@style/btn_style"
                android:layout_marginTop="16dp"
                android:text="@string/save"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="ЗДЕСЬ БУДЕТ ПАНЕЛЬ УВЕДОМЛЕНИЙ, И ПАНЕЛЬ ДЛЯ ПРОСМОТРА ОЦЕНОК\n НО ПОКА НЕТ🤷‍♂️"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:layout_marginTop="84dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/loading_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/half_invisible"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="90dp"
            android:layout_height="90dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_suggest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:text="@string/please_login"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/btn_style"
            android:layout_marginTop="32dp"
            android:text="@string/btn_login" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>